--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2108,7 +2108,9 @@ html {
   font-family: 'Lato', sans-serif; }
 
 body {
-  background-color: #F0F2F4; }
+  background-color: #F0F2F4;
+  -webkit-overflow-scrolling: touch;
+  /* Lets it scroll lazy */ }
 
 .prevent-scrolling {
   overflow: hidden; }
