--- a/styles/scss/_base.scss
+++ b/styles/scss/_base.scss
@@ -7,6 +7,7 @@ html {
 
 body {
   background-color: #F0F2F4;
+  -webkit-overflow-scrolling: touch; /* Lets it scroll lazy */
 }
 
 .prevent-scrolling { overflow: hidden;}
