--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2933,12 +2933,11 @@ li.item-detail {
   display: inline-block;
   margin: 0 0.5rem 2rem 0.5rem;
   text-align: center;
-  width: 80%;
+  margin: 0 0.3rem 1rem 0.3rem;
+  text-align: center;
+  width: calc(50% - 1.2rem);
   -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1); }
-  @media all and (min-width: 40em) {
-    .shop-item {
-      width: calc(50% - 1.2rem); } }
   @media all and (min-width: 64em) {
     .shop-item {
       width: calc(33.333% - 1.2rem); } }
